--- a/worldclock.io2/index.html
+++ b/worldclock.io2/index.html
@@ -9,7 +9,7 @@
 
   <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400'>
 
-      <link rel="stylesheet" href="style2.css">
+      <link rel="stylesheet" href="css/style.css">
 
   
 </head>
